feat(customization): whitelabel
